deprecated/manifests/mednote/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mednote-api-deployment
  labels: 
    app: mednote-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mednote-api
  template:
    metadata:
      labels: 
        app : mednote-api
    spec:
      containers:
        - name : mednote-api
          image: registry.gitlab.com/rsdevelopment/rails-apps/mednote-api/arm64:0.4
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 60
          volumeMounts:
            - mountPath: /mednote-api/storage
              name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mednote-api
