deprecated/manifests/mednote/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mednote-api
  labels:
    app: mednote-api
spec:
  selector:
    app: mednote-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
