deprecated/manifests/mednote/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: mednote-api
spec:
  rules:
  - host: api.192.168.0.40.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mednote-api
            port:
              number: 3000
